objects/LLC_BI__Loan_Compliance__c.object
<CustomObject>
    <description>The Loan Compliance object holds data necessary to ensure compliance for a loan.</description>
    <fields>
        <fullName>LLC_BI__Amount_Financed__c</fullName>
        <description>The system automatically populates this field to display the Regulation Z amount of credit provided to the borrower or on the borrower’s behalf. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount of credit provided to the borrower.</inlineHelpText>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Action_Taken__c</fullName>
        <description>This is a required field.  This field indicates the settlement or closing date for originations. For applications that did not result in an origination, the date when the action was taken or when the notice was sent to the applicant is entered. For an application that was expressly withdrawn by the applicant, either the date shown on the applicant&apos;s letter or the date you received the letter or notice is reported. For loans that an institution purchased, the date of purchase is entered.</description>
        <inlineHelpText>Select the date that the action was taken. For example the date the loan was originated, Application denied, Purchased Loan, etc.</inlineHelpText>
        <label>Date Action Taken</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Application_Received__c</fullName>
        <description>This is a required field.  This field indicates the date the application was received or the date on the application form.</description>
        <inlineHelpText>If the date the application was received does not apply to the loan, please do not select a date.</inlineHelpText>
        <label>Date Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date_Rate_Set__c</fullName>
        <description>This date is used to determine the average prime offer rate for a comparable transaction is the date on which the loan&apos;s interest rate was set by the financial institution for the final time before closing.</description>
        <label>Date Interest Rate Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Finance_Charge__c</fullName>
        <description>The system automatically populates this field to display the Regulation Z amount the credit costs to borrow. By default, this field is blank.</description>
        <inlineHelpText>This field displays the cost of credit to the borrower.</inlineHelpText>
        <label>Finance Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_APOR_Effective_Date__c</fullName>
        <description>The system automatically populates this field with the effective date of the FFIEC APOR Index referenced for High-Cost Mortgage. By default, this field is blank.</description>
        <inlineHelpText>This field displays the effective date of the APOR Index used to complete HCM compliance calculations for a loan.</inlineHelpText>
        <label>HCM APOR Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_APOR_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate the APR for a loan exceeds High-Cost Mortgage APOR plus spread. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if the APR for a loan exceeds HCM APOR plus spread.</inlineHelpText>
        <label>HCM APOR Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_APOR__c</fullName>
        <description>The system automatically populates this field with the Average Prime Offer Rate percentage when compliance calculations are completed for High-Cost Mortgage. By default, this field is blank.</description>
        <inlineHelpText>This field displays the APOR for a loan when HCM compliance calculations are completed.</inlineHelpText>
        <label>HCM APOR</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_Calculation_Date__c</fullName>
        <description>The system automatically populates this field to display the date compliance calculations for High-Cost Mortgage are completed. By default, this field is blank.</description>
        <inlineHelpText>This field displays the HCM calculation date.</inlineHelpText>
        <label>HCM Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HCM_Points_And_Fees_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox to indicate the points and fees for a loan exceeds High-Cost Mortgage maximum points and fees. By default, this field is deselected.</description>
        <inlineHelpText>This field indicates if the points and fees for a loan exceeds HCM maximum points and fees.</inlineHelpText>
        <label>HCM Points and Fees Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_AUS_Other_Result_Text__c</fullName>
        <description>This field indicates in text the specific other AUS result(s) if Code 16 (Other) is selected in an Automated Underwriting System Result field.</description>
        <inlineHelpText>If &quot;Other&quot; is selected as one of the Automated Underwriting Systems Results, this field allows you to specify the results from the system.</inlineHelpText>
        <label>Other AUS Result Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_AUS_Other_System_Text__c</fullName>
        <description>This field indicates in text the name of the specific other AUS(s) if Code 5 (Other) is selected in any Automated Underwriting System fields.</description>
        <inlineHelpText>If &quot;Other&quot; is selected as one of the Automated Underwriting Systems, this field allows you to specify the system.</inlineHelpText>
        <label>Other AUS System Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_AUS_Result__c</fullName>
        <description>This is a required field.  This field indicates the result(s) generated by the automated underwriting system (AUS).</description>
        <inlineHelpText>This field indicates the result(s) generated by the automated underwriting system (AUS).  (Up to 5 options can be selected)</inlineHelpText>
        <label>Automated Underwriting System Result</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_AUS__c</fullName>
        <description>This is a required field. This field indicates the automated underwriting system(s) (AUS) used by your institution to evaluate the application by entering up to five (5) of the applicable.</description>
        <label>Automated Underwriting System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Action_Taken__c</fullName>
        <description>This is a required field.  This field indicates the type of action the FI took on the loan, application, or preapproval request.</description>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Amount__c</fullName>
        <description>This is a required field. This field indicates the dollar amount granted or requested. The process that creates the extract file will convert this to thousands if required.</description>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Balloon_Payment__c</fullName>
        <description>This is a required field.  This field indicates whether the contractual terms include, or would have included, a balloon payment.</description>
        <label>Balloon Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Business_Or_Commercial_Purpose__c</fullName>
        <description>This is a required field.  This field indicates whether the covered loan is, or the application is for a covered loan that will be made, primarily for a business or commercial purpose.</description>
        <label>Business or Commercial Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Co_Applicant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>-------DEPRECATED----------- This field is used to indicate that there is co-applicant related to the loan for purposed of HMDA reporting.</description>
        <label>D- Co-Applicant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Combined_LTV__c</fullName>
        <description>This is a required field.  This field indicates the percentage, the ratio of the total amount of debt secured by the property to the value of the property relied on in making the credit decision.</description>
        <inlineHelpText>Use decimal places only if the ratio relied upon uses decimal places.</inlineHelpText>
        <label>Combined Loan-to-Value Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Debt_To_Income_Ratio__c</fullName>
        <description>This is a required field.  This field indicates as a percentage, the ratio of the applicant&apos;s or borrower&apos;s total monthly debt to the total monthly income relied on in making the credit decision.</description>
        <inlineHelpText>Enter NA on purchased loans, when no credit decision was made (closed of incompleteness), No DTI relied upon, Applicant AND Co-applicant are both non-natural persons.</inlineHelpText>
        <label>Debt-to-Income Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Denial_Reason_Text__c</fullName>
        <description>This field specifies in text the specific other reason(s) for denial if Code 9 (Other) is selected in any Reason for Denial field.</description>
        <inlineHelpText>You may enter up to 50 characters to list the other denial reason.</inlineHelpText>
        <label>Other Denial Reason Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Denial_Reasons__c</fullName>
        <description>This is a required field. This field indicates the principal reason, or reasons, for denial. For 2017 reporting, you may enter up to three (3) applicable Codes. For 2018 reporting, you may enter up to four (4) applicable Codes.</description>
        <label>Denial Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Discount_Points__c</fullName>
        <description>This field indicates in dollars, the points paid to the creditor to reduce the interest rate.</description>
        <inlineHelpText>If no points were paid, leave this field blank.</inlineHelpText>
        <label>Discount Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_HOEPA_Status__c</fullName>
        <description>This is a required field.  This field indicates whether the loan is a high-cost mortgage under the Home Ownership and Equity Protection Act (HOEPA).</description>
        <label>HOEPA Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Initially_Payable_To__c</fullName>
        <description>This is a required field.  This field indicates whether the obligation arising from the covered loan was, or, in the case of an application, would have been, initially payable to your institution.</description>
        <label>Initially Payable To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Interest_Only_Payments__c</fullName>
        <description>This is a required field. This field indicates whether the contractual terms include, or would have included, interest-only payments.</description>
        <label>Interest-Only Payments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Legal_Entity_Identifier__c</fullName>
        <description>This is a required field. This field is the identifier issued to the financial institution (FI) by a utility endorsed by the Global LEI Foundation or LEI Regulatory Oversight Committee.</description>
        <label>Legal Entity Identifier (LEI)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Lender_Credits__c</fullName>
        <description>This field indicates in dollars, the amount of lender credits.</description>
        <inlineHelpText>If no lender credits were provided, leave this field blank.</inlineHelpText>
        <label>Lender Credits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Lien_Status__c</fullName>
        <description>This is a required field.  This field indicates whether the property is a first or subordinate lien.</description>
        <inlineHelpText>For every originated loan or application, report whether the loan is secured by a first or subordinate lien on a dwelling or is not secured by a dwelling.</inlineHelpText>
        <label>Lien Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Loan_Purpose__c</fullName>
        <description>This is a required field.  This field indicates whether the transaction is for home purchase, home improvement, refinancing, cash-out refinancing, or another purpose.</description>
        <label>Purpose of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Loan_Type__c</fullName>
        <description>This is a required field.  This field indicates whether the loan or application is insured by the Federal Housing Administration, guaranteed by the Veterans Administration, Rural Housing Service, or Farm Service Agency.</description>
        <label>Type of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Negative_Amortization__c</fullName>
        <description>This is a required field.  This field indicates whether the contractual terms include, or would have included, a term that would cause the covered loan to be a negative amortization loan.</description>
        <label>Negative Amortization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Open_End_Line_Of_Credit__c</fullName>
        <description>This is a required field.  This field indicates whether the covered loan is, or the application is for, an open-end line of credit.</description>
        <label>Open-End Line of Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Origination_Charges__c</fullName>
        <description>This is a required field.  This field indicates in dollars, the total of all itemized amounts that are designated borrower-paid at or before closing.</description>
        <inlineHelpText>If the amount is zero, enter 0.</inlineHelpText>
        <label>Origination Charges</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Other_Non_Amortizing_Features__c</fullName>
        <description>This is a required field.  This field indicates whether the contractual terms include, or would have included, any term, other than those described in Paragraphs 1003.4(a)(27)(i), (ii), and (iii) that would allow for payments other than fully amortizing payments during the loan term.</description>
        <label>Other Non-amortizing Features</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Preapproval_Requested__c</fullName>
        <description>This is a required field.  This field indicates whether the transaction involved a preapproval request for a home purchase loan under a preapproval program.</description>
        <label>Request for Preapproval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Address__c</fullName>
        <description>This is a required field.  This field indicates the Street Address of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Affordable_Units__c</fullName>
        <description>This is a required field.  This field indicates the number of individual dwelling units related to any multifamily dwelling property securing the covered loan or, in the case of an application, proposed to secure the covered loan, that are income-restricted pursuant to Federal, State, or local affordable housing programs.</description>
        <label>Multifamily Affordable Units</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Census_Tract__c</fullName>
        <description>This is a required field.  This field indicates the 11 digit census tract number as defined by the U.S. Census Bureau of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>Do not use decimals.  If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing Census Tract</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_City__c</fullName>
        <description>This is a required field. This field indicates the City of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Construct_Method__c</fullName>
        <description>This is a required field.  This field indicates whether the dwelling is site-built or a manufactured home.</description>
        <label>Property Securing Construction Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_FIPS_County_Code__c</fullName>
        <description>This is a required field.  This field indicates the Five digit Federal Information Processing Standards (FIPS) County Code of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>Do not use commas.  If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing FIPS County Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_MSA_MD_Number__c</fullName>
        <description>This is a required field.  This field indicated the five-digit metropolitan statistical area (MSA) number or, if available, the five-digit metropolitan division (MD) number.</description>
        <inlineHelpText>If the five-digit metropolitan statistical area (MSA) number or the five-digit metropolitan division (MD) number is not applicable, enter NA.</inlineHelpText>
        <label>Five Digit MSA/MD Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Manufactured_Type__c</fullName>
        <description>This is a required field. This field indicates whether the covered loan or application is, or would have been, secured by a manufactured home and land, or by a manufactured home and not land.</description>
        <label>Property Securing Manufactured Home Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Mfd_Home_Int__c</fullName>
        <description>This is a required field.  This field indicates the applicant&apos;s or borrower&apos;s land property interest in the land on which a manufactured home is, or will be, located.</description>
        <label>Property Securing Manufactured Home Int</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Occupancy_Type__c</fullName>
        <description>This is a required field. This field indicates whether the property will be Owner-occupied as a principal dwelling, Not owner-occupied or N/A. This field will be used to capture occupancy information after 12/31/2017.</description>
        <label>Property Securing Occupancy Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Occupancy__c</fullName>
        <description>This is a required field. This field indicates whether the property will be Owner-occupied as a principal dwelling, Not owner-occupied or N/A. This field will be used to capture occupancy information prior to 1/1/2018.</description>
        <label>Property Securing Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Property_Type__c</fullName>
        <description>This is a required field.  This field indicates whether the loan or application was for manufactured housing, a multifamily dwelling, or a one- to-four-family dwelling other than manufactured housing.</description>
        <label>Property Securing Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Property_Value__c</fullName>
        <description>This is a required field. This field indicates in dollars, the value of the property securing the covered loan or, in the case of an application, proposed to secure the covered loan, relied on in making the credit decision.</description>
        <label>Property Securing Property Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_State__c</fullName>
        <description>This is a required field.  This field indicates the State of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Total_Units__c</fullName>
        <description>This is a required field.  This field indicates the number of individual dwelling units related to the property securing the covered loan or, in the case of an application, proposed to secure the covered loan.</description>
        <label>Property Securing Total Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Property_Securing_Zip__c</fullName>
        <description>This is a required field.  This field indicates the ZIP of the property securing the loan (or proposed to secure a loan)</description>
        <inlineHelpText>If the address of the property is unknown, please enter &apos;NA&apos;.</inlineHelpText>
        <label>Property Securing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>